Fix spacing bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,7 @@ $image-path: '~src/assets/images/';
     margin-right: auto;
     margin-left: auto;
   }
+  width: 100%;
   margin-top: 64px;
   max-width: 1700px;
 }
